PA_Education/TestMenifest/force-app/main/default/objects/CorporateCard__c/CorporateCard__c.object-meta.xml
<CustomObject>
    <label>법인카드</label>
    <nameField>
        <label>법인카드 이름</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>