PA_Education/TestMenifest/force-app/main/default/objects/CorporateCard__c/fields/BirthDate__c.field-meta.xml
<CustomField>
    <fullName>BirthDate__c</fullName>
    <label>소지자생년월일</label>
    <length>100</length>
    <type>Text</type>
</CustomField>