PA_Education/TestMenifest/force-app/main/default/objects/CorporateCard__c/fields/CardCompany__c.field-meta.xml
<CustomField>
    <fullName>CardCompany__c</fullName>
    <label>카드사</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>비씨</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>국민</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>하나</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>삼성</label>
            </value>
            <value>
                <fullName>06</fullName>
                <label>신한</label>
            </value>
            <value>
                <fullName>07</fullName>
                <label>현대</label>
            </value>
            <value>
                <fullName>08</fullName>
                <label>롯데자사</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>씨티, 한미</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>NH채움</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>수협</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>신협</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>우리</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>하나SK</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>광주</label>
            </value>
            <value>
                <fullName>22</fullName>
                <label>전북</label>
            </value>
            <value>
                <fullName>23</fullName>
                <label>제주</label>
            </value>
            <value>
                <fullName>24</fullName>
                <label>산은캐피탈</label>
            </value>
            <value>
                <fullName>25</fullName>
                <label>해외비자</label>
            </value>
            <value>
                <fullName>26</fullName>
                <label>해외마스터</label>
            </value>
            <value>
                <fullName>27</fullName>
                <label>해외다이너스</label>
            </value>
            <value>
                <fullName>28</fullName>
                <label>해외AMX</label>
            </value>
            <value>
                <fullName>29</fullName>
                <label>해외JCB</label>
            </value>
            <value>
                <fullName>32</fullName>
                <label>우체국</label>
            </value>
            <value>
                <fullName>33</fullName>
                <label>저축은행</label>
            </value>
            <value>
                <fullName>34</fullName>
                <label>은련</label>
            </value>
            <value>
                <fullName>35</fullName>
                <label>새마을금고</label>
            </value>
            <value>
                <fullName>36</fullName>
                <label>KDB산업</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>