PA_Education/TestMenifest/force-app/main/default/objects/CorporateCard__c/fields/CardIssueDate__c.field-meta.xml
<CustomField>
    <fullName>CardIssueDate__c</fullName>
    <label>발급일</label>
    <type>Date</type>
</CustomField>