PA_Education/TestMenifest/force-app/main/default/objects/CorporateCard__c/fields/CardLimit__c.field-meta.xml
<CustomField>
    <fullName>CardLimit__c</fullName>
    <defaultValue>0</defaultValue>
    <label>카드한도</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>