PA_Education/TestMenifest/force-app/main/default/objects/CorporateCard__c/fields/CardNickname__c.field-meta.xml
<CustomField>
    <fullName>CardNickname__c</fullName>
    <label>카드별칭</label>
    <length>255</length>
    <type>Text</type>
</CustomField>