PA_Education/TestMenifest/force-app/main/default/objects/CorporateCard__c/fields/CardNumber__c.field-meta.xml
<CustomField>
    <fullName>CardNumber__c</fullName>
    <externalId>true</externalId>
    <label>카드번호</label>
    <length>16</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>