PA_Education/TestMenifest/force-app/main/default/objects/CorporateCard__c/fields/CardType__c.field-meta.xml
<CustomField>
    <fullName>CardType__c</fullName>
    <label>법인카드종류</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>하이패스카드</fullName>
            </value>
            <value>
                <fullName>경영지원카드</fullName>
            </value>
            <value>
                <fullName>영업마케팅카드</fullName>
            </value>
            <value>
                <fullName>개인형카드</fullName>
            </value>
            <value>
                <fullName>임원카드</fullName>
            </value>
            <value>
                <fullName>PM카드</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>