PA_Education/TestMenifest/force-app/main/default/objects/CorporateCard__c/fields/CustomerNumber__c.field-meta.xml
<CustomField>
    <fullName>CustomerNumber__c</fullName>
    <label>사업장고객번호</label>
    <length>40</length>
    <type>Text</type>
</CustomField>