PA_Education/TestMenifest/force-app/main/default/objects/CorporateCard__c/fields/EffectiveMonth__c.field-meta.xml
<CustomField>
    <fullName>EffectiveMonth__c</fullName>
    <label>유효년월</label>
    <length>8</length>
    <type>Text</type>
</CustomField>