PA_Education/TestMenifest/force-app/main/default/objects/CorporateCard__c/fields/EmployeeNo__c.field-meta.xml
<CustomField>
    <fullName>EmployeeNo__c</fullName>
    <description>Insert 시 사번으로 소유자 업데이트 (실사용자가 null일경우 실사용자도 업데이트), Update 시 실사용자의 사번으로 사번필드 업데이트</description>
    <label>사번</label>
    <length>20</length>
    <type>Text</type>
</CustomField>