PA_Education/TestMenifest/force-app/main/default/objects/CorporateCard__c/fields/fm_CardClassification__c.field-meta.xml
<CustomField>
    <fullName>fm_CardClassification__c</fullName>
    <formula>IF(ISBLANK( HolderName__c ), &apos;무기명&apos;, &apos;기명&apos;)</formula>
    <label>카드구분</label>
    <type>Text</type>
</CustomField>