PA_Education/TestMenifest/force-app/main/default/objects/CorporateCard__c/fields/HolderName__c.field-meta.xml
<CustomField>
    <fullName>HolderName__c</fullName>
    <label>소지자고객명</label>
    <length>10</length>
    <type>Text</type>
</CustomField>