PA_Education/TestMenifest/force-app/main/default/objects/CorporateCard__c/fields/PaymentAccount__c.field-meta.xml
<CustomField>
    <fullName>PaymentAccount__c</fullName>
    <label>결제계좌번호</label>
    <length>25</length>
    <type>Text</type>
</CustomField>