PA_Education/TestMenifest/force-app/main/default/objects/CorporateCard__c/fields/PaymentBank__c.field-meta.xml
<CustomField>
    <fullName>PaymentBank__c</fullName>
    <label>결제은행</label>
    <length>18</length>
    <type>Text</type>
</CustomField>