PA_Education/TestMenifest/force-app/main/default/objects/CorporateCard__c/fields/RealUser__c.field-meta.xml
<CustomField>
    <fullName>RealUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>실사용자</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CorporateCard</relationshipName>
    <type>Lookup</type>
</CustomField>