PA_Education/TestMenifest/force-app/main/default/objects/CorporateCard__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CardCompany__c</columns>
    <columns>CardNumber__c</columns>
    <columns>CardNickname__c</columns>
    <columns>CardType__c</columns>
    <columns>HolderName__c</columns>
    <columns>fm_CardClassification__c</columns>
    <columns>RealUser__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>